Fixed a mistake to add the circle.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   }
   
   #circle {
-    width: 50ww;
-    height: 50ww;
+    width: 75vw;
+    height: 75vw;
     border-radius: 50%;
     filter: blur(30px);
     animation: circle-pulse 5s infinite;
